// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GIVEN NextExport pod WHEN copy siteBanner AND WHEN siteBanner exist THEN banner is copied 1`] = `"export default function Banner { return <div> Banner </div> };"`;

exports[`nextjs export noterefs WHEN note ref of a note that references itself 1`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Public</span></div>
<a href=\\"/notes/\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>public content
</p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Public</span></div>
<a href=\\"/notes/\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>public content
</p><blockquote>
too many nested note refs
</blockquote><p></p>
</div></div><p></p><p></p>
</div></div><p></p>"
`;

exports[`nextjs export noterefs WHEN note ref of a note with anchor  1`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Private</span></div>

</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><h1 id=\\"anchor2\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#anchor2\\"></a>anchor2</h1>
<p>anchor 2 content</p>
</div></div><p></p>"
`;

exports[`nextjs export noterefs WHEN note ref of a private note  1`] = `
"[
  \\"private---0\\"
]
"
`;

exports[`nextjs export noterefs WHEN note ref of a private note  2`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Private</span></div>

</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><ul>
<li><a href=\\"/notes/public\\">Public</a></li>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">Private (Private)</a></li>
<li><a href=\\"/notes/public.one\\">One</a></li>
</ul>
</div></div><p></p>"
`;
